syntax = "proto3";
package api;

message Data{
    string message = 1;
}

message DataRequest{
    Data data = 1;
}

message DataResponse{
    int32 http_status =1;
    string encryption_key = 2;
    string encryption_id = 3;
}

message RetrieveRequest{
    string encryption_key = 1;
    string encryption_id = 2;
}

message RetrieveResponse{
    Data data = 1;
}

service DataService{
    // unary call for now
    rpc Store(DataRequest) returns (DataResponse){};
    rpc Retrieve(RetrieveRequest) returns (RetrieveResponse){};
}